<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Y-EdNet</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="animspeed">300</string>
    <string name="menu_home">홈</string>
    <string name="menu_talk">대화</string>
    <string name="menu_notifications">알림</string>
    <string name="menu_more">더보기</string>
    <string name="menu_calendar">일정</string>
    <string name="today">오늘</string>
    <string name="monday">월</string>
    <string name="sunday">일</string>
    <string name="saturday">토</string>
    <string name="friday">금</string>
    <string name="thursday">목</string>
    <string name="wednesday">수</string>
    <string name="tuesday">화</string>
    <string name="alert_exit">뒤로 가기 버튼을 한 번 더 누르면 앱이 종료됩니다.</string>
    <string name="a00_00activityWait">잠시만 기다려 주세요.</string>
    <string name="a00_00activityServerFail">서버 연결이 원활하지 않습니다.\n잠시 후 재시도 해주세요.</string>
    <string name="a00_00activityUnKnownError">알수 없는 오류입니다.</string>
    <string name="a00_00activityConfirmOK">확인</string>
    <string name="a00_00activityConfirmCancel">취소</string>
    <string name="a00_00activityAlertOK">확인</string>
    <string name="a00_01activityIDChangeFail">아이디변경 실패</string>
    <string name="a00_01activityExit">종료 하시겠습니까?</string>
    <string name="a01_01activityEmptyMessage">학교를 입력해주세요.</string>
    <string name="a01_02activityCheckID">아이디를 입력해주세요.</string>
    <string name="a01_02activityCheckPW">비밀번호를 입력해주세요.</string>
    <string name="a01_04z01activityJoinFail">참여 할수 없습니다.</string>
    <string name="a01_04z01activityJoin">참여 하기</string>
    <string name="a01_04z01activityOK">확인</string>
    <string name="a01_04activityStartTime">시작 시간</string>
    <string name="a01_04activityEndTime">종료 시간</string>
    <string name="a01_04activityRealTimeChatting">실시간 채팅은 웹 브라우저에서\n이용해 주시기 바랍니다.</string>
    <string name="a01_04z01layoutTitle">온라인 미팅</string>
    <string name="a01_04z01layoutSubject">미팅 주제</string>
    <string name="a01_04z01layoutStart">시작 시간</string>
    <string name="a01_04z01layoutEnd">종료 시간</string>
    <string name="a01_04z01layoutContent">미팅 내용</string>
    <string name="a01_05activityFriendAdd">친구로 등록되었습니다.</string>
    <string name="a01_05activityProfessor">교수</string>
    <string name="a01_05activityAssistant">조교</string>
    <string name="a01_05layoutTitle">교수정보</string>
    <string name="a01_05layoutProfessorTitle">교수</string>
    <string name="a01_05layoutAssistantTitle">조교</string>
    <string name="a01_06activityFriendAdd">친구로 등록되었습니다.</string>
    <string name="a01_06z01activitySite">사이트</string>
    <string name="a01_06z01activityPersonal">개인</string>
    <string name="a01_06z01activityEmptyMessage">내용을 입력해 주세요.</string>
    <string name="a01_06z01activitySave">저장되었습니다.</string>
    <string name="a01_06layoutTitle">참여자목록</string>
    <string name="a01_06layoutSearchHint">이름검색</string>
    <string name="a01_06z01layoutTitle">학습관찰일지</string>
    <string name="a01_06z01layoutHint">내용을 입력하세요.</string>
    <string name="a01_06z01layoutSave">변경사항 저장</string>
    <string name="a01_06z01layoutCancel">취소</string>
    <string name="a01_06adapterNumber">전화번호</string>
    <string name="a01_06adapterLastAccess">최근접속</string>
    <string name="a01_07activityStat0">정원</string>
    <string name="a01_07activityStat1">출석</string>
    <string name="a01_07activityStat2">결석</string>
    <string name="a01_07activityStat3">지각</string>
    <string name="a01_07activityStat4">기타</string>
    <string name="a01_07activityStat5">선택</string>
    <string name="a01_07activityWeekly"> 주차</string>
    <string name="a01_07activityPeriod"> 교시</string>
    <string name="a01_07layoutTitle">출석관리</string>
    <string name="a01_07layoutAtonce">일괄출석처리</string>
    <string name="a01_07layoutReference">원하는 주차가 없을 경우 웹 브라우저에서 관리하시기 바랍니다.</string>
    <string name="a01_07Z91layoutTitle">자동출석관리</string>
    <string name="a01_08activityWeekly"> 주차</string>
    <string name="a01_08activityPeriod"> 교시</string>
    <string name="a01_08activityStat1">출석 </string>
    <string name="a01_08activityStat2">결석 </string>
    <string name="a01_08activityStat3">지각 </string>
    <string name="a01_08activityStat4">기타 </string>
    <string name="a01_08activityOK">확인</string>
    <string name="a01_08activityCancel">취소</string>
    <string name="a01_08layoutTitle">오프라인 출석 확인</string>
    <string name="a01_09z08activityKind1">접속 및 버전문의</string>
    <string name="a01_09layoutTitle">더보기</string>
    <string name="a01_09layoutRow2">내 정보</string>
    <string name="a01_09layoutRow3">추가 아이디</string>
    <string name="a01_09layoutRow4">알림설정</string>
    <string name="a01_09layoutRow5">암호잠금</string>
    <string name="a01_09layoutRow6">프로그램 정보</string>
    <string name="a01_09layoutRow7">코스모스 소개</string>
    <string name="a01_09layoutRow8">문의하기</string>
    <string name="a01_09layoutRow9">로그아웃</string>
    <string name="a01_09layoutRowLanguage">언어설정</string>
    <string name="a01_09layoutCurrentID">내 정보</string>
    <string name="a01_09layoutOtherID">추가 아이디</string>
    <string name="a01_09z02layoutTitle">내 정보</string>
    <string name="a01_09z02layoutRow1">이름</string>
    <string name="a01_09z02layoutRow2">아이디</string>
    <string name="a01_09z02layoutRow3">기관</string>
    <string name="a01_09z02layoutRow4">학번</string>
    <string name="a01_09z02layoutRow5">소속</string>
    <string name="a01_09z02layoutRow6">연락처</string>
    <string name="a01_09z02layoutRow7">이메일</string>
    <string name="a01_09z02layoutRow8">로그아웃</string>
    <string name="a01_09z04layoutTitle">알림설정</string>
    <string name="a01_09z04layoutAlarm">푸시알림</string>
    <string name="a01_09z04layoutSound">소리</string>
    <string name="a01_09z04layoutVibrate">진동</string>
    <string name="a01_09z04layoutPreview">메시지 미리보기</string>
    <string name="a01_09z05layoutTitle">암호잠금</string>
    <string name="a01_09z05layoutRow1">암호잠금설정</string>
    <string name="a01_09z05layoutRow2">암호변경하기</string>
    <string name="a01_09z05layoutCareText">주의! 암호를 분실했을 경우 앱을 삭제하고 재설치 해야 합니다.</string>
    <string name="a01_09z05z01layoutTitle">인증번호</string>
    <string name="a01_09z05z01layoutText">인증번호를 입력하세요.</string>
    <string name="a01_09z05z01layoutPWText1">코스모스 암호를 입력하세요.</string>
    <string name="a01_09z05z01layoutPWText2">확인을 위해 한번 더 입력해 주세요.</string>
    <string name="a01_09z06layoutTitle">프로그램 정보</string>
    <string name="a01_09z06layoutCurrentVersion">현재 버전</string>
    <string name="a01_09z06layoutLastVersion">최신 버전</string>
    <string name="a01_09z06layoutUpdate">최신 버전으로 업데이트 하시겠습니까?</string>
    <string name="a01_09z07layoutTitle">코스모스 소개</string>
    <string name="a01_09z08layoutTitle">문의하기</string>
    <string name="a01_09z08layoutText1">답변 받으실 이메일 주소를 입력해 주세요.</string>
    <string name="a01_09z08layoutEmailHint">your@email</string>
    <string name="a01_09z08layoutText2">문의분류를 선택해 주세요.</string>
    <string name="a01_09z08layoutContentHint">오류발생 시간을 입력하시면,\n보다 더 상세한 정보를 받아볼 수 있습니다.</string>
    <string name="a01_09z08layoutText3">문의 내용을 입력해 주세요.</string>
    <string name="a01_09z08layoutText5">수집한 개인정보는 답변 회신용으로만 이용되며\n다른 목적으로는 이용되지 않습니다.</string>
    <string name="a01_09z08layoutAgreeText">개인정보수집 및 이용에 동의합니다.</string>
    <string name="a01_09z08layoutSend">작성</string>
    <string name="a01_09z08layoutCancel" tools:ignore="ButtonCase">취소</string>
    <string name="a01_09z09layoutTitle">언어설정</string>
    <string name="a01_10blind">글을 열람할 권한이 없습니다.</string>
    <string name="a01_10z01activityHit">조회</string>
    <string name="a01_10z01activityDelete1">게시물을 삭제 하시겠습니까?</string>
    <string name="a01_10z01activityDelete2">게시물이 삭제 되었습니다.</string>
    <string name="a01_10z01activityEmptyMessage">메시지를 입력해 주세요.</string>
    <string name="a01_10z02activitySubjectEmpty">제목을 입력해 주세요.</string>
    <string name="a01_10z02activityContentEmpty">글을 작성해 주세요.</string>
    <string name="a01_10z01layoutWrite">글쓰기</string>
    <string name="a01_10z01layoutUpdate">글 수정</string>
    <string name="a01_10z01layoutDelete">삭제</string>
    <string name="a01_10z01layoutSend">등록</string>
    <string name="a01_10z02layoutName">닉네임</string>
    <string name="a01_10z02layoutSubject">제목</string>
    <string name="a01_10z02layoutContent">내용</string>
    <string name="a01_10z02layoutWrite">작성</string>
    <string name="a01_10z02layoutCancel">취소</string>
    <string name="a01_10adapterHit">조회</string>
    <string name="a01_10adapterSecret">비밀글 입니다.</string>
    <string name="a01_11activityEmptyMessage">메시지를 입력해주세요.</string>
    <string name="a01_11layoutnewMessage">새로운 메시지</string>
    <string name="a01_11layoutSend">전송</string>
    <string name="a01_15activityEmptySchedule">의 목록을 찾을 수 없습니다.</string>
    <string name="a01_15Z01activityUnKnowSchedule">알수 없는 일정 입니다.</string>
    <string name="a01_15layoutTitle">일정</string>
    <string name="a01_15layoutList1">전체일정</string>
    <string name="a01_15layoutList2">학사일정</string>
    <string name="a01_15layoutList3">강좌일정</string>
    <string name="a01_15layoutList4">과거강좌</string>
    <string name="a01_15layoutList5">공개강좌</string>
    <string name="a01_15layoutList6">나의일정</string>
    <string name="a01_15z01layoutTitle">세부일정</string>
    <string name="a01_15z01layoutMemo">메모</string>
    <string name="a01_16layoutTitle">대화</string>
    <string name="a01_18layoutTitle">성적 확인</string>
    <string name="a01_18adapterColumnText1">성적</string>
    <string name="a01_18adapterColumnText2">범위</string>
    <string name="a01_18adapterColumnText3">백분율</string>
    <string name="a01_18adapterColumnText4">피드백</string>
    <string name="a01_19activityContinue">이어보기 하시겠습니까?</string>
    <string name="a01_19activityhutch">초 이상은 재생할수 없습니다.\n진도율이 100%인 경우에만 이동이 가능합니다.</string>
    <string name="a01_19activityNotComplete">이 동영상은 진도율을 기록하고 있습니다. 이 경우 배속기능을 사용할 수 없습니다.</string>
    <string name="a01_19activityComplete">재생이 완료되었습니다.</string>
    <string name="a01_20layoutTitle">알림</string>
    <string name="a01_20adapterminutes">분 전</string>
    <string name="a01_20adapterhours">시간 전</string>
    <string name="a01_20adapterdays">일 전</string>
    <string name="a01_20adapterweeks">주 전</string>
    <string name="a01_20adaptermonths">개월 전</string>
    <string name="a01_20adapteryear">년 전</string>
    <string name="a99year">년</string>
    <string name="a99month">월</string>
    <string name="a99day">일</string>
    <string name="a99Message">메시지</string>
    <string name="a99Learning">학습관찰일지</string>
    <string name="a99InternetError">인터넷에 연결되지 않았습니다.</string>
    <string name="a10_00MessageRecv">메시지가 도착했습니다.</string>
    <string name="a903LMSTaskCheckID">아이디 혹은 패스워드를 확인하세요.</string>
    <string name="a01_02layoutLoginMove1">유레카 로그인</string>
    <string name="a01_02layoutLoginMove2">외부인 로그인</string>
    <string name="a01_02layoutLoginButton">로그인</string>
    <string name="pull_to_refresh_pull_label">당겨서 새로 고침&#8230;</string>
    <string name="pull_to_refresh_release_label">놓아서 새로 고침&#8230;</string>
    <string name="pull_to_refresh_refreshing_label">로딩 중&#8230;</string>
    <string name="alarm_description">푸시알림에 대한 설정은 알림 센터에서 확인 하실 수 있습니다.</string>
    <string name="preview_description">메시지 내용을 미리 확인하실 수 있습니다.</string>
    <string name="sound_description">Enable this option to receive a sound alert when a new message arrives while the app is running</string>
    <string name="vibration_description">Enable this option to receive a vibration alert when new message arrives while the app is running</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="a01_09z08layoutpictext">사진을 첨부해 주세요.</string>
</resources>