<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#535658"
    android:paddingBottom="3dp">

    <TextView
        android:id="@+id/a01_15sundaytext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:singleLine="true"
        android:text="@string/sunday"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:autoSizeMaxTextSize="15sp"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/a01_15mondaytext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/a01_15sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/a01_15sundaytext"
        app:layout_constraintStart_toStartOf="@+id/a01_15sundaytext"
        app:layout_constraintTop_toBottomOf="@+id/a01_15sundaytext" />

    <TextView
        android:id="@+id/a01_15mondaytext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:singleLine="true"
        android:text="@string/monday"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:autoSizeMaxTextSize="15sp"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/a01_15tuesdaytext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/a01_15sundaytext"
        app:layout_constraintTop_toTopOf="@+id/a01_15sundaytext" />

    <TextView
        android:id="@+id/a01_15monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/a01_15mondaytext"
        app:layout_constraintStart_toStartOf="@+id/a01_15mondaytext"
        app:layout_constraintTop_toBottomOf="@+id/a01_15mondaytext" />

    <TextView
        android:id="@+id/a01_15tuesdaytext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:singleLine="true"
        android:text="@string/tuesday"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:autoSizeMaxTextSize="15sp"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/a01_15wednesdaytext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/a01_15mondaytext"
        app:layout_constraintTop_toTopOf="@+id/a01_15sundaytext" />

    <TextView
        android:id="@+id/a01_15tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/a01_15tuesdaytext"
        app:layout_constraintStart_toStartOf="@+id/a01_15tuesdaytext"
        app:layout_constraintTop_toBottomOf="@+id/a01_15mondaytext" />

    <TextView
        android:id="@+id/a01_15wednesdaytext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:singleLine="true"
        android:text="@string/wednesday"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:autoSizeMaxTextSize="15sp"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/a01_15thursdaytext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/a01_15tuesdaytext"
        app:layout_constraintTop_toTopOf="@+id/a01_15sundaytext" />

    <TextView
        android:id="@+id/a01_15wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/a01_15wednesdaytext"
        app:layout_constraintStart_toStartOf="@+id/a01_15wednesdaytext"
        app:layout_constraintTop_toBottomOf="@+id/a01_15mondaytext" />

    <TextView
        android:id="@+id/a01_15thursdaytext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:singleLine="true"
        android:text="@string/thursday"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:autoSizeMaxTextSize="15sp"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/a01_15fridaytext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/a01_15wednesdaytext"
        app:layout_constraintTop_toTopOf="@+id/a01_15sundaytext" />

    <TextView
        android:id="@+id/a01_15thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/a01_15thursdaytext"
        app:layout_constraintStart_toStartOf="@+id/a01_15thursdaytext"
        app:layout_constraintTop_toBottomOf="@+id/a01_15mondaytext" />

    <TextView
        android:id="@+id/a01_15fridaytext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:singleLine="true"
        android:text="@string/friday"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:autoSizeMaxTextSize="15sp"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/a01_15saturdaytext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/a01_15thursdaytext"
        app:layout_constraintTop_toTopOf="@+id/a01_15sundaytext" />

    <TextView
        android:id="@+id/a01_15friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/a01_15fridaytext"
        app:layout_constraintStart_toStartOf="@+id/a01_15fridaytext"
        app:layout_constraintTop_toBottomOf="@+id/a01_15mondaytext" />

    <TextView
        android:id="@+id/a01_15saturdaytext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:singleLine="true"
        android:text="@string/saturday"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:autoSizeMaxTextSize="15sp"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/a01_15fridaytext"
        app:layout_constraintTop_toTopOf="@+id/a01_15sundaytext" />

    <TextView
        android:id="@+id/a01_15saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/a01_15saturdaytext"
        app:layout_constraintStart_toStartOf="@+id/a01_15saturdaytext"
        app:layout_constraintTop_toBottomOf="@+id/a01_15mondaytext" />
</androidx.constraintlayout.widget.ConstraintLayout>